# workshop_ds_project_structure

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/pipeline/: extract.py  load.py  transform.py
data/output/: output.xlsx
docs/: index.md
tests/: __init__.py  test_pipeline.py
