[tool.poetry]
name = "workshop1"
version = "0.1.0"
description = "meu projeto de etl"
authors = ["pedro_ribeiro"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
