[tool.poetry]
name = "workshop1"
version = "0.1.0"
description = "meu projeto de etl"
authors = ["pedro_ribeiro"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.2.0"
openpyxl = "^3.1.2"
pytest = "^7.4.4"
pyarrow = "^15.0.0"
isort = "^5.13.2"
black = "^24.1.0"
taskipy = "^1.12.2"
mkdocs = "^1.5.3"
mkdocstrings-python = "^1.8.0"
pygments = "^2.17.2"
mkdocs-material = "^9.5.5"
pymdown-extensions = "^10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = []

[tool.taskipy.tasks]
format = "isort . && black ."
test = "poetry run pytest -v"
kill = "fuser -k 8000/tcp"